@@ -1329,6 +1329,22 @@ hr {
   bottom: 0;
 }
 
+.left100 {
+  left: 100%;
+}
+
+.right100 {
+  right: 100%;
+}
+
+.top100 {
+  top: 100%;
+}
+
+.bottom100 {
+  bottom: 100%;
+}
+
 .z0 {
   z-index: 0;
 }
