@@ -6,6 +6,7 @@
   * (border) add border-width
   * (outline) outline outline-offset
   * (margin) more margins
+  * (position) (left|right|top|bottom)100
   * (variables) drop --default-* properties
 
 # 0.24.0 (2023-03-10)
